# LearnVulkan

./: .gitignore  .gitmodules  BuildDebug.bat  CMakeLists.txt  Generate.bat  GenerateVS2022.bat  README.md  build-debug.bat
.github/workflows/: CI-Build.yml  CIBuild.yml  CMake.yml  CMakeCI.yml  CMakeNightly.yaml  Nightly-Build.yaml
BatchFiles/: BuildDebug.bat  BuildRelease.bat  Generate.bat  GenerateVS2019.bat
GitHub/Actions/: CMake.yml
Math/: CMakeLists.txt
Projects/: CMakeLists.txt
Projects/BMP_Loader/: CMakeLists.txt
Projects/BMP_Loader/Include/BMPLoader/: BMPLoader.hpp
Projects/BMP_Loader/Source/: BMPLoader.cpp
Projects/Math/: CMakeLists.txt  Vector.h
Projects/Math/Include/: Matrix.hpp  Utilities.hpp  Vector.hpp
Projects/Math/Include/Math/: Matrix.hpp  Transform.hpp
Projects/Math/Source/: Matrix.cpp  Transform.cpp  Vector.cpp
Projects/OBJ_Loader/: CMakeLists.txt
Projects/OBJ_Loader/Include/: OBJLoader.hpp
Projects/OBJ_Loader/Include/OBJLoader/: OBJLoader.hpp
Projects/OBJ_Loader/Source/: OBJLoader.cpp
Projects/Vulkan_PBR/: CMakeLists.txt
Projects/Vulkan_PBR/Include/: Allocation.hpp  AssetManager.hpp  Camera.hpp  Common.hpp  CommonTypes.hpp  ErrorHandling.hpp  ForwardRenderer.hpp  GPUResourceManager.hpp  InputManager.hpp  Logging.hpp  Memory.hpp  Scene.hpp  String.hpp  VulkanPBR.hpp
Projects/Vulkan_PBR/Include/Assets/: Material.hpp  StaticMesh.hpp  Texture.hpp
Projects/Vulkan_PBR/Include/Components/: MaterialComponent.hpp  StaticMeshComponent.hpp  TransformComponent.hpp
Projects/Vulkan_PBR/Include/Graphics/: Allocators.hpp  Descriptors.hpp  Device.hpp  Instance.hpp  Memory.hpp  ShaderLibrary.hpp  Viewport.hpp  Vulkan.hpp  VulkanFunctions.inl  VulkanModule.hpp
Projects/Vulkan_PBR/Include/Input/: InputManager.hpp
Projects/Vulkan_PBR/Include/Platform/: Windows.hpp
Projects/Vulkan_PBR/Include/Primitives/: StaticMesh.hpp
Projects/Vulkan_PBR/Include/ShaderCompiler/: ShaderCompiler.hpp
Projects/Vulkan_PBR/Include/Utilities/: Containers.hpp  Iterator.hpp  String.hpp
Projects/Vulkan_PBR/Shaders/: AmbientLighting.frag  AmbientLighting.vert  FullScreenTriangle.vert  PostProcess.frag  ProjectOnScreen.vert  SimpleLighting.frag  TorranceSparrow.frag  Triangle.frag  Triangle.vert
Projects/Vulkan_PBR/Source/: Allocation.cpp  AssetManager.cpp  Camera.cpp  ForwardRenderer.cpp  GPUResourceManager.cpp  InputManager.cpp  Logging.cpp  MacroMagic.cpp  Memory.cpp  Scene.cpp  Vulkan.cpp  VulkanPBR.cpp
Projects/Vulkan_PBR/Source/Assets/: Material.cpp  StaticMesh.cpp  Texture.cpp
Projects/Vulkan_PBR/Source/Components/: MaterialComponent.cpp  StaticMeshComponent.cpp  TransformComponent.cpp
Projects/Vulkan_PBR/Source/Graphics/: Allocators.cpp  Descriptors.cpp  Device.cpp  Instance.cpp  Memory.cpp  ShaderLibrary.cpp  Viewport.cpp  Vulkan.cpp  VulkanModule.cpp
Projects/Vulkan_PBR/Source/Input/: InputManager.cpp
Projects/Vulkan_PBR/Source/Platform/: Windows.cpp
Projects/Vulkan_PBR/Source/Primitives/: StaticMesh.cpp
Projects/Vulkan_PBR/Source/ShaderCompiler/: ShaderCompiler.cpp
Projects/Vulkan_Wrapper/: CMakeLists.txt
Projects/Vulkan_Wrapper/Include/: Vulkan.hpp  VulkanWin32.hpp
Projects/Vulkan_Wrapper/Source/: Vulkan.cpp  VulkanFunctions.inl
Vulkan_PBR/: CMakeLists.txt
Vulkan_PBR/Include/: VulkanPBR.hpp
Vulkan_PBR/Source/: VulkanPBR.cpp
